<resources>

    <string name="app_name" translatable="false">ShortBrain</string>
    <string name="action_settings">Settings</string>

    //Connectivity
    <string name="connectivity">You are offline, please connect to Internet !</string>

    //Original Title
    <string name="originalTitleTextView">Original Title </string>
    //Overview
    <string name="overviewText">Overview </string>

    <string name="sort_by">Sort By</string>

    <string name="pref_movies_popular" translatable="false">popular</string>
    <string name="pref_movies_top_rated" translatable="false">top_rated</string>
    <string name="pref_movies_upcoming" translatable="false">upcoming</string>
    <string name="pref_movies_now_playing" translatable="false">now_playing</string>
    <string name="pref_movies_favorite" translatable="false">favorite</string>

    <string name="pref_movies_sorting_key" translatable="false">sortby</string>
    <string name="pref_movies_sorting_favorite_key" translatable="false">favorite</string>

    <string name="key_movies_popular">Popular</string>
    <string name="key_movies_top_rated">Top Rated</string>
    <string name="key_movies_upcoming">Upcoming</string>
    <string name="key_movies_now_playing">This Week</string>
    <string name="key_movies_favorite">My Favorites</string>

    //Sorting choice array for the spinner
    <string-array name="sorting_choice_entries">
        <item>@string/key_movies_popular</item>
        <item>@string/key_movies_top_rated</item>
        <item>@string/key_movies_upcoming</item>
        <item>@string/key_movies_now_playing</item>
        <item>@string/key_movies_favorite</item>
    </string-array>

    <string-array name="sorting_choice_values" translatable="false">
        <item>popular</item>
        <item>top_rated</item>
        <item>upcoming</item>
        <item>now_playing</item>
        <item>favorite</item>
    </string-array>

    <string name="textView_casting_list_title">Casting and Character </string>
    <string name="textView_genre_title">Genre </string>

    <string name="title_activity_settings">Settings</string>

    <!--MoviesList key for SaveInstance MainActivity -->
    <string name="key_movies_list" translatable="false">moviesList</string>

    <string name="my_favorite_add_button">Mark as favorite</string>
    <string name="my_favorite_remove_button">Remove from favorite</string>

    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite</string>

    <string name="user_choice" translatable="false">user choice</string>

    <string name="rating" translatable="false">%1$s / 10</string>

    <string name="reviews" translatable="false">\nAuthor : %1$s \n \n%2$s</string>

    <string name="reviewTitle">Reviews </string>
    <string name="trailerTitle">Videos </string>
    <string name="runtime" translatable="false">%1$s min</string>

    <string name="IMAGE_BASE_URL" translatable="false">http://image.tmdb.org/t/p/w185</string>
    <string name="IMAGE_BASE_URL_HIGH_QUALITY" translatable="false">http://image.tmdb.org/t/p/w500</string>
    <string name="BASE_URL" translatable="false">https://api.themoviedb.org/3/</string>

    <string name="profil">Profil</string>
    <string name="favorite">Favorite</string>

    <string name="textView_collection_title">Collection </string>

    <string name="contentDescription_poster">Poster</string>

    <string name="addFavorite">The movie has been added to your favorite list</string>

    <string name="genre">Genre </string>
    <string name="title_activity_cast_detail" translatable="false">CastDetailActivity</string>

    <string name="search_title">Search</string>
    <string name="search_hint">look for a movie ?</string>

    <string name="error_loading">Error while loading movie !</string>

    <string name="share_movie">Share Movie via</string>

</resources>
