<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_popular"
            android:checked="true"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/key_movies_popular"/>

        <item
            android:id="@+id/drawer_top_rated"
            android:checked="true"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/key_movies_top_rated"/>

        <item
            android:id="@+id/drawer_upcoming"
            android:checked="true"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/key_movies_upcoming"/>

        <item
            android:id="@+id/drawer_this_week"
            android:checked="true"
            android:icon="@drawable/ic_person_white_24dp"
            android:title="@string/key_movies_now_playing"/>

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favorite"/>

    </group>
</menu>