<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMovieFragment"
    tools:showIn="@layout/activity_detail_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center|start"
            android:gravity="center|start"
            style="@style/titleStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp" >


                <ImageView
                    android:id="@+id/moviePictureImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_marginRight="20dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:textAppearance="?android:attr/textAppearanceLarge"
                                android:id="@+id/movieYearTextView" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:text="@string/originalTitleTextView" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/originalTitleTextView"
                                android:layout_marginBottom="10dp" />

                             <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:id="@+id/movieRatingTextView" />

                             <Button
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:id="@+id/markAsFavoriteButton"
                                android:text="@string/my_favorite_add_button"/>

                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="fill_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/overviewText" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:id="@+id/overviewMovieTextView" />
                </ScrollView>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
